<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_alignParentBottom="true"
              android:orientation="vertical"
              android:baselineAligned="true"
              android:id="@+id/line1"
                tools:context=".MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterBand"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="Enter Band Name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bands"
        android:id="@+id/totalBands"
        android:layout_below="@+id/enterBand"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_bands"
        android:id="@+id/avgBands"
        android:textSize="20sp"
        android:layout_below="@+id/totalBands"
        android:layout_alignParentStart="true"/>

   
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/bandNum"
        android:hint="Enter Band Number"
        android:layout_below="@+id/avgBands"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/singleButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singBand"
        android:id="@+id/singleButton"
        android:layout_alignBottom="@+id/bandNum"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/avgBands"
        />
   </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/saveButton"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_button"
        android:id="@+id/showButton"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"/>
    </LinearLayout>

</LinearLayout>

